2016-12-19  Aaron Sawdey  <acsawdey@linux.vnet.ibm.com>

	* config/rs6000/rs6000-protos.h (expand_strn_compare): Declare.
	* config/rs6000/rs6000.md (UNSPEC_CMPB): New unspec.
	(cmpb<mode>3): pattern for generating cmpb.
	(cmpstrnsi): pattern to expand strncmp ().
	* config/rs6000/rs6000.opt (mstring-compare-inline-limit): Add a new
	target option for controlling how much code inline expansion of
	strncmp() will be allowed to generate.
	* config/rs6000/rs6000.c (expand_strncmp_align_check): generate code
	for runtime page crossing check of strncmp () args.
	(expand_strn_compare): Function to do builtin expansion of strncmp ().

2016-12-19  David Malcolm  <dmalcolm@redhat.com>

	* print-rtl-function.c (print_rtx_function): Update
	example in comment to reflect current format.

2016-12-19  Uros Bizjak  <ubizjak@gmail.com>

	* config/i386/i386.md (*popcounthi2_1): New insn_and_split pattern.

2016-12-19  Sandra Loosemore  <sandra@codesourcery.com>

	* doc/cpp.texi: Clean up anachronistic C99 references and remove
	discussion of very old GCC versions.
	(Differences from previous versions): Delete entire section.

2016-12-19  Will Schmidt  <will_schmidt@vnet.ibm.com>

	* config/rs6000/rs6000.c (rs6000_gimple_fold_builtin): Add handling for
	early expansion of vector multiply and subtract builtins.

2016-12-19  David Malcolm  <dmalcolm@redhat.com>

	* print-rtl.c (rtx_writer::print_rtx_operand_code_r): For
	non-virtual pseudos in compact mode, wrap the regno in '<' and '>'
	rather than using a '%' prefix.
	* rtl-tests.c (selftest::test_dumping_regs): Update for above change.

2016-12-19  Dominik Vogt  <vogt@linux.vnet.ibm.com>

	PR target/78748
	* config/s390/s390.md ("*andc_split_<mode>"): Allow memory destination
	only if it coincides with operand 2.

2016-12-19  Dominik Vogt  <vogt@linux.vnet.ibm.com>

	* combine.c (change_zero_ext): Skip generation of redundant AND.

2016-12-19  Krister Walfridsson  <krister.walfridsson@gmail.com>
